CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (HNCSJSNJ_C)

CMAKE_POLICY(SET CMP0015 OLD)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../output/)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../output/lib/)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
LINK_DIRECTORIES(./lib)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/log/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/proparse/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)
