INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRC)

ADD_DEFINITIONS(-DMAKEDATE="2016-12-29")
SET(WATCH_CONF "watchdog.conf")

ADD_CUSTOM_TARGET(CONF_FILE ALL
		COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/${WATCH_CONF} ${EXECUTABLE_OUTPUT_PATH}/conf/${WATCH_CONF})

ADD_EXECUTABLE(watchdog ${SRC})
TARGET_LINK_LIBRARIES(watchdog pthread)
